--- a/configure.in
+++ b/configure.in
@@ -160,7 +160,9 @@ for ssldir in "" $tryssldir /usr /usr/local/openssl /usr/lib/openssl /usr/local/
 			#include <openssl/bn.h>
 			#include <openssl/sha.h>
 			int main(void) 
-			{RSA *key;key=RSA_generate_key(32,3,NULL,NULL);return(key==NULL);}
+			{RSA *key; char seed[2048];memset(seed, 0, sizeof(seed));
+			RAND_seed(seed, sizeof(seed));key=RSA_generate_key(32,3,NULL,NULL);
+			return(key==NULL);}
 		],
 		[
 			AC_DEFINE(HAVE_OPENSSL)
@@ -174,7 +176,9 @@ for ssldir in "" $tryssldir /usr /usr/local/openssl /usr/lib/openssl /usr/local/
 			#include <ssl/bn.h>
 			#include <ssl/sha.h>
 			int main(void) 
-			{RSA *key;key=RSA_generate_key(32,3,NULL,NULL);return(key==NULL);}
+			{RSA *key; char seed[2048];memset(seed, 0, sizeof(seed));
+			RAND_seed(seed, sizeof(seed));key=RSA_generate_key(32,3,NULL,NULL);
+			return(key==NULL);}
 		],
 		[
 			AC_DEFINE(HAVE_SSL)
